Add dark theme toggle link to header

--- a/includes/header.html
+++ b/includes/header.html
@@ -52,6 +52,10 @@
           </div>
         </li>
 
+        <a class="nav-link" href="#" data-theme-toggle aria-label="Change to dark theme">
+          <i class="fas fa-moon"></i>
+        </a>
+
       </ul>
     </div>
 
